[gd_scene load_steps=2 format=3 uid="uid://be0p2rhviwg5u"]

[ext_resource type="Script" uid="uid://dtqamj2inyy7o" path="res://prefabs/ui/network_ui/network_ui.gd" id="1_gvnlj"]

[node name="NetworkUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("1_gvnlj")

[node name="NetworkTab" type="HFlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_bottom = 58.0
grow_horizontal = 0
alignment = 2

[node name="Choose Network Type" type="Label" parent="NetworkTab"]
layout_mode = 2
text = "Choose a network type:"
horizontal_alignment = 2

[node name="Enet" type="Button" parent="NetworkTab"]
layout_mode = 2
text = "Enet"

[node name="Steam" type="Button" parent="NetworkTab"]
layout_mode = 2
text = "Steam"

[node name="EnetConnectTab" type="HFlowContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.0
offset_bottom = 66.0
grow_horizontal = 0
alignment = 2

[node name="IP" type="LineEdit" parent="EnetConnectTab"]
layout_mode = 2
placeholder_text = "IP Address"
expand_to_text_length = true

[node name="Join" type="Button" parent="EnetConnectTab"]
layout_mode = 2
text = "Join
"

[node name="Host" type="Button" parent="EnetConnectTab"]
layout_mode = 2
text = "Host"

[node name="Back" type="Button" parent="EnetConnectTab"]
layout_mode = 2
text = "Back"

[node name="SteamLobbyBrowser" type="HFlowContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -249.0
offset_bottom = 66.0
grow_horizontal = 0
alignment = 2

[node name="SteamLobbyList" type="VBoxContainer" parent="SteamLobbyBrowser"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="SteamLobbyBrowser/SteamLobbyList"]
layout_mode = 2
text = "Lobby Name: TEST | Players: 1/4"
horizontal_alignment = 2

[node name="Host" type="Button" parent="SteamLobbyBrowser"]
layout_mode = 2
text = "Host"

[node name="Back" type="Button" parent="SteamLobbyBrowser"]
layout_mode = 2
text = "Back"

[node name="LobbyTab" type="HFlowContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -241.0
offset_bottom = 190.0
grow_horizontal = 0
alignment = 2

[node name="NetworkID" type="Label" parent="LobbyTab"]
unique_name_in_owner = true
layout_mode = 2
text = "Network ID: 3204594532"
horizontal_alignment = 2

[node name="LobbyID" type="Label" parent="LobbyTab"]
unique_name_in_owner = true
layout_mode = 2
text = "Lobby ID: 127.0.0.1"
horizontal_alignment = 2

[node name="ConnectedPlayers" type="Label" parent="LobbyTab"]
unique_name_in_owner = true
layout_mode = 2
text = "Connected Players:
Player1
Player2
Player3"
horizontal_alignment = 2

[node name="Disconnect" type="Button" parent="LobbyTab"]
layout_mode = 2
text = "Disconnect"

[connection signal="pressed" from="NetworkTab/Enet" to="." method="_on_enet_pressed"]
[connection signal="pressed" from="NetworkTab/Steam" to="." method="_on_steam_pressed"]
[connection signal="text_submitted" from="EnetConnectTab/IP" to="." method="_on_ip_text_submitted"]
[connection signal="pressed" from="EnetConnectTab/Join" to="." method="_on_join_enet_pressed"]
[connection signal="pressed" from="EnetConnectTab/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="EnetConnectTab/Back" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="SteamLobbyBrowser/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="SteamLobbyBrowser/Back" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="LobbyTab/Disconnect" to="." method="_on_back_to_main_pressed"]
